# agda2rust

./: .gitignore  FirstFixed  README.md  agda2rust.cabal  lazy.rs  stack.yaml
src/: Main.hs
src/Agda/Compiler/: Hir.hs  HirToLir.hs  Lir.hs  RustSyntax.hs  ToRust.hs
